# datascience

./: .gitignore  Dockerfile  Dockerfile2  Makefile  README.md  _notebooks  package-core.json  package-lock-core.json  package-lock.json  package.json  pkglist-builder.txt  pkglist-core.txt  pkglist-devel.txt  pkglist.txt  pyproject-core.toml  pyproject-full.toml  pyproject.toml  requirements-base.txt  requirements-core.txt  start-notebook.sh
