[tool.poetry]
name = "datascience"
version = "0.1.0"
description = ""
authors = ["Andreas Trawöger <atrawog@dorgeln.org>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
pandas = "^1.2.3"
jupyterlab = "^3.0.10"
altair = "^4.1.0"
altair-saver = "^0.5.0"
nbgitpuller = "^0.9.0"
ipywidgets = "^7.6.3"
beautifulsoup4 = "^4.9.3"
bokeh = "^2.3.0"
Bottleneck = "^1.3.2"
cloudpickle = "^1.6.0"
Cython = "^0.29.22"
dask = "^2021.3.0"
dill = "^0.3.3"
h5py = "^3.2.1"
ipympl = "^0.6.3"
numexpr = "^2.7.3"
patsy = "^0.5.1"
protobuf = "^3.15.6"
scikit-image = "^0.18.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
seaborn = "^0.11.1"
SQLAlchemy = "^1.3.23"
statsmodels = "^0.12.2"
sympy = "^1.7.1"
vincent = "^0.4.4"
widgetsnbextension = "^3.5.1"
xlrd = "^2.0.1"
invoke = "^1.5.0"
jupyter-server-proxy = "^1.6.0"
jupyter-panel-proxy = "^0.1.0"
awesome-panel-extensions = "^20210124.1"
cysgp4 = "^0.3.3"
ansible = "2.9.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
